User acces control, new routes, relational table insert query performance optimization
