# docs/swagger.json
@@ -388,6 +388,75 @@
                 }
             }
         },
+        "/api/issue-comment": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Creates new IssueComment",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "IssueComments"
+                ],
+                "summary": "Create new IssueComment",
+                "parameters": [
+                    {
+                        "description": "createIssues",
+                        "name": "Issue",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.IssueCommentCreateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/helper.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/model.IssueComment"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/helper.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/helper.EmptyObj"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/api/issue/kanban": {
             "get": {
                 "security": [
@@ -673,6 +742,61 @@
                 }
             }
         },
+        "/api/subject/user-options/{subject_id}}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Gets subject user options by subject id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Subject"
+                ],
+                "summary": "Gets subject user options by subject id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Subject ID",
+                        "name": "subject_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/helper.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.UserOptionResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/subject/{subject_id}/{user_id}": {
             "put": {
                 "security": [
@@ -848,31 +972,14 @@
             "properties": {
                 "data": {},
                 "errors": {},
-                "message": {
-                    "type": "string"
-                }
+                "message": {}
             }
         },
         "model.Issue": {
             "type": "object",
             "properties": {
-                "assignie": {
-                    "$ref": "#/definitions/model.User"
-                },
-                "comments": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.IssueComment"
-                    }
-                },
                 "createdAt": {
                     "type": "string"
-                },
-                "dependentIssues": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.Issue"
-                    }
                 },
                 "description": {
                     "type": "string"
@@ -883,29 +990,17 @@
                 "issueForeignId": {
                     "type": "string"
                 },
-                "issues": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.Issue"
-                    }
-                },
-                "p": {
+                "parentIssueID": {
                     "type": "integer"
                 },
                 "progress": {
                     "type": "integer"
-                },
-                "reporter": {
-                    "$ref": "#/definitions/model.User"
                 },
                 "spendingTime": {
                     "type": "integer"
                 },
                 "status": {
                     "type": "integer"
-                },
-                "subject": {
-                    "$ref": "#/definitions/model.Subject"
                 },
                 "targetTime": {
                     "type": "integer"
@@ -927,9 +1022,6 @@
                 "createdAt": {
                     "type": "string"
                 },
-                "creator": {
-                    "$ref": "#/definitions/model.User"
-                },
                 "id": {
                     "type": "integer"
                 },
@@ -949,41 +1041,6 @@
                 },
                 "id": {
                     "type": "integer"
-                },
-                "projectLeader": {
-                    "$ref": "#/definitions/model.User"
-                },
-                "subjects": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.Subject"
-                    }
-                },
-                "title": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.Stage": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "endTime": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "startTime": {
-                    "type": "string"
                 },
                 "title": {
                     "type": "string"
@@ -1005,38 +1062,14 @@
                 "id": {
                     "type": "integer"
                 },
-                "issues": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.Issue"
-                    }
-                },
-                "project": {
-                    "$ref": "#/definitions/model.Project"
-                },
                 "repoId": {
                     "type": "string"
-                },
-                "stages": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.Stage"
-                    }
-                },
-                "teamLeader": {
-                    "$ref": "#/definitions/model.User"
                 },
                 "title": {
                     "type": "string"
                 },
                 "updatedAt": {
                     "type": "string"
-                },
-                "user": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.User"
-                    }
                 }
             }
         },
@@ -1069,6 +1102,17 @@
                 }
             }
         },
+        "request.IssueCommentCreateRequest": {
+            "type": "object",
+            "properties": {
+                "context": {
+                    "type": "string"
+                },
+                "issueID": {
+                    "type": "integer"
+                }
+            }
+        },
         "request.IssueCreateRequest": {
             "type": "object",
             "required": [
@@ -1081,7 +1125,8 @@
                     "type": "integer"
                 },
                 "description": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 255
                 },
                 "issueForeignId": {
                     "type": "string"
@@ -1102,7 +1147,8 @@
                     "type": "integer"
                 },
                 "title": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 32
                 }
             }
         },
@@ -1129,10 +1175,12 @@
             ],
             "properties": {
                 "description": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 255
                 },
                 "title": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 32
                 }
             }
         },
@@ -1148,10 +1196,13 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 32
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 32,
+                    "minLength": 8
                 }
             }
         },
@@ -1164,13 +1215,15 @@
             ],
             "properties": {
                 "description": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 255
                 },
                 "projectID": {
                     "type": "integer"
                 },
                 "title": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 32
                 }
             }
         },
@@ -1213,6 +1266,7 @@
                     "type": "string"
                 },
                 "issues": {
+                    "description": "Comments        []*IssueCommentResponse `gorm:\"foreignkey:IssueID;\" json:\"issueComments\"`",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/response.LeafIssueResponse"
@@ -1335,6 +1389,17 @@
                     "type": "integer"
                 },
                 "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.UserOptionResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
                     "type": "string"
                 }
             }
