# dto/request/issue_comment_request.go
@@ -1,0 +1,7 @@
+package request
+
+type IssueCommentCreateRequest struct {
+	Context   string `json:"context"`
+	IssueID   uint64 `json:"issueID"`
+	CreatorID uint64 `json:"-"`
+}
